# todo

./: .gitignore  README.md  package-lock.json  package.json
back_end/todo/: Cargo.toml  Rocket.toml  surrealdb.config.json
back_end/todo/src/: main.rs
back_end/todo/src/lib/: cors.rs  db.rs  error.rs  mod.rs  response.rs
back_end/todo/src/lib/api/: file.rs  mod.rs  team.rs  todo.rs  user.rs
back_end/todo/src/lib/entry/: annex.rs  avatar.rs  date.rs  login.rs  mod.rs  priority.rs  todo.rs  user.rs
back_end/todo/src/lib/entry/dto/: annex.rs  avatar.rs  date.rs  priority.rs  status.rs  tag.rs  team.rs  todo.rs  user.rs
back_end/todo/src/lib/entry/po/: annex.rs  date.rs  login.rs  mod.rs  status.rs  tag.rs  team.rs  todo.rs  user.rs
back_end/todo/src/lib/entry/vo/: mod.rs  team.rs  todo.rs  user.rs
back_end/todo/src/lib/mapping/: mod.rs  team.rs  todo.rs  user.rs
src/: App.vue  main.ts
src/api/: index.ts
src/api/axios/: index.ts
src/api/src/: defaultApi.ts  team.ts  todo.ts  type.ts  user.ts
src/assets/defaultIcons/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/components/: index.ts
src/components/header/: header.vue
src/components/menu/: menu.vue
src/components/notice/: notice.vue
src/components/svg/: svg.ts
src/core/: index.ts
src/core/src/: annex.ts  avatar.ts  common.ts  init.ts  notice.ts  team.ts  todo.ts  user.ts
src/router/: index.ts  routePath.ts
src/store/: IndexPinia.ts  pinia.ts
src/styles/: global.scss  name.scss
src/views/: collaborate.vue  history.vue  main.vue  todos.ts  user.vue
(+25 files in other folders)
