[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = { version = "0.5.0", features = ["json","secrets"] }
rocket_cors = "0.6.0"
surreal_use = "0.1.0"
surrealdb = "1.1.1"
